[package]
name = "stylin"
version = "0.10.4"
edition = "2024"
description = "Convert markdown to pandoc markdown with custom styles"
repository = "https://github.com/qtfkwk/stylin"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "wrap_help"] }
json5 = "1.3.1"
pulldown-cmark = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.3"
clap-cargo = "0.18.3"
